aggiunta-generazione-bombe

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
 
       <select id="livelli">
-        <option>Scegli livello</option>
+        <!-- <option>Scegli livello</option> -->
         <option value="100">Facile</option>
         <option value="81">Medio </option>
         <option value="49">Difficile</option>
